--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /examples/.ipynb_checkpoints/py-07-multindex-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-from-1-to-6-checkpoint.ipynb
+/project/.ipynb_checkpoints/solution-01-primary-checkpoint.ipynb
+/project/.ipynb_checkpoints/solution-01-secondary-checkpoint.ipynb
