--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /project/.ipynb_checkpoints/solution-01-from-1-to-6-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-primary-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-secondary-checkpoint.ipynb
+/project/.ipynb_checkpoints/solution-01-primary-final-checkpoint.ipynb
+/project/.ipynb_checkpoints/solution-01-secondary-final-checkpoint.ipynb
