--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /project/.ipynb_checkpoints/solution-01-secondary-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-primary-final-checkpoint.ipynb
 /project/.ipynb_checkpoints/solution-01-secondary-final-checkpoint.ipynb
+/examples/.ipynb_checkpoints/py-05-groupby-checkpoint.ipynb
